--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -4,6 +4,8 @@
         <title>Try Django </title>
     </head>
 <body>
+    {% include "navbar.html" %}
+    
     {% block content %}
     replace me
     {% endblock%}
