--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -3,4 +3,21 @@
 {% block content %}
     <h1>About</h1>
     <p>nothing</p>
+
+
+<p>
+    {{ my_text }}, {{ my_number }}k
+</p>
+
+<ul>
+    <li>Item 1</li>
+    <li>Item 2</li>
+</ul>
+
+<ul>
+{% for my_sub_item in my_list %}
+    <li>{{ forloop.counter }} - {{ my_sub_item }}</li>
+{% endfor %}
+</ul>
+
 {% endblock%}
