moved the templates forms

--- a/src/products/templates/products/product_detail.html
+++ b/src/products/templates/products/product_detail.html
@@ -3,9 +3,7 @@
 {% block content %}
 
 <h1>
-    {% if object.title == null %}
-        I ain't got no stuff
-    {% endif %}
+    In App Template:
 </h1>
 <p>
     {% if object.description == null %}
