added model form

--- a/src/products/templates/products/product_detail.html
+++ b/src/products/templates/products/product_detail.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <h1>
-    In App Template:
+    In App Template: {{object.title}}
 </h1>
 <p>
     {% if object.description == null %}
